--- a/index.html
+++ b/index.html
@@ -5,34 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab:01</title>
 
-  <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="layout.css">
+  <link rel="stylesheet" href="modules.css">
 </head>
 
 <body>
-  <header id="a">
+  <header class="a">
     <nav>a</nav>
   </header>
 
   <main>
-    <aside>b</aside>
+    <aside class="b">b</aside>
 
     <section>
-      <div>c</div>
-      <div>d</div>
+      <div class="c">c</div>
+      <div class="d">d</div>
     </section>
     
     <section>
-      <div>e</div>
-      <div>f</div>
-      <div>g</div>
-      <div>h</div>
+      <div class="e">e</div>
+      <div class="f">f</div>
+      <div class="g">g</div>
+      <div class="h">h</div>
     </section>
   </main>
 
   <footer>
-    <div>i</div>
+    <div class="i">i</div>
   </footer>
 
 </body>
