Modified | Lab4a Grid x3 Breakpoints

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lab:01</title>
 
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="base.css">
-  <link rel="stylesheet" href="layout.css">
-  <link rel="stylesheet" href="modules.css">
+  <link rel="stylesheet" href="modules/reset.css">
+  <link rel="stylesheet" href="modules/base.css">
+  <!-- <link rel="stylesheet" href="modules/layout.css"> -->
+  <link rel="stylesheet" href="modules/lab4a.css">
+  <link rel="stylesheet" href="modules/modules.css">
 </head>
 
 <body>
@@ -19,21 +20,22 @@
   <main>
     <aside class="b">b</aside>
 
-    <section>
-      <div class="c">c</div>
-      <div class="d">d</div>
-    </section>
-    
-    <section>
-      <div class="e">e</div>
-      <div class="f">f</div>
-      <div class="g">g</div>
-      <div class="h">h</div>
-    </section>
+
+    <div class="c">c</div>
+    <div class="d">d</div>
+
+  
+
+    <div class="e">e</div>
+    <div class="f">f</div>
+    <div class="g">g</div>
+    <div class="h">h</div>
+
+    <div class="i">i</div>
   </main>
 
   <footer>
-    <div class="i">i</div>
+    
   </footer>
 
 </body>
